--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -34,3 +34,6 @@ jobs:
 
       - name: Run unit tests
         run: python -m pytest tests/unit
+      
+      - name: Run integration tests
+        run: python -m pytest tests/integration
