--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ pytest==7.3.1
 pytest-mock==3.10.0
 python-dotenv==1.0.0
 requests==2.31.0
+requests-mock==1.10.0
 toml==0.10.2
 tomli==2.0.1
 urllib3==2.0.2
