--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -32,7 +32,8 @@ jobs:
       - name: Run flake8
         run: | 
           pip install flake8
-          flake8 --ignore E203,W503,W504,E501,E731,E741 .
+          # stop the build if there are flake8 errors
+          flake8 . --count --show-source --statistics
 
       - name: Run unit tests
         run: python -m pytest tests/unit
