--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,41 @@
+amqp==5.1.1
+billiard==3.6.4.0
 celery==5.2.7
 certifi==2022.12.7
+charset-normalizer==3.2.0
+click==8.1.6
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
 coverage==7.2.6
+Deprecated==1.2.14
+flake8==6.0.0
+idna==3.4
+importlib-metadata==6.8.0
 iniconfig==2.0.0
+kombu==5.3.1
+mccabe==0.7.0
+opentelemetry-api==1.19.0
+opentelemetry-sdk==1.19.0
+opentelemetry-semantic-conventions==0.40b0
 packaging==23.1
 pluggy==1.0.0
 project-paths==1.1.1
+prompt-toolkit==3.0.39
+pycodestyle==2.10.0
+pyflakes==3.0.1
 pytest==7.3.1
 pytest-mock==3.10.0
 python-dotenv==1.0.0
+pytz==2023.3
 requests==2.31.0
 requests-mock==1.10.0
+six==1.16.0
 toml==0.10.2
 tomli==2.0.1
+typing_extensions==4.7.1
 urllib3==2.0.2
+vine==5.0.0
+wcwidth==0.2.6
+wrapt==1.15.0
+zipp==3.16.2
