--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,6 @@ LOGFILE_PATH =/home/etdadm/logs/etd
 CONSOLE_LOGGING_ONLY=false 
 CONSUME_QUEUE_NAME=etd_base_template
 PUBLISH_QUEUE_NAME=etd_submission_ready
-JAEGER_NAME="http://localhost:4317"
+JAEGER_NAME="http://jaeger_dashboard:4317"
 JAEGER_SERVICE_NAME=ETD
 BROKER_URL=
