--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_VERSION=0.0.1
 APP_LOG_LEVEL=INFO
 LOG_LEVEL=INFO
 LOG_FILE_BACKUP_COUNT=10
-LOGFILE_PATH =/home/etdadm/logs/etd
+LOGFILE_PATH =/home/etdadm/logs/etd_base_template
 # if set to true, file logging will be turned off
 CONSOLE_LOGGING_ONLY=false 
 CONSUME_QUEUE_NAME=etd_base_template
